hphp/hack/test/typecheck/const_attribute/static/redeclare_from_const.php.exp
File "redeclare_from_const.php", line 4, characters 44-45:
This property is __Const (Typing[4204])
File "redeclare_from_const.php", line 5, characters 39-40:
This property is not __Const
